--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
         const tg = window.Telegram.WebApp;
         tg.ready();
         tg.expand();
-        tg.onEvent("message", (msg) => {
-    try {
-        const data = JSON.parse(msg.data);
-        if (data.action === "subscription") {
-            app.plan = data.plan;
-            app.render();
-        }
-    } catch {}
-});
-        
+        // читаем тариф из URL ( ?plan=free / premium / pro )
+const params = new URLSearchParams(window.location.search);
+const planFromUrl = params.get('plan') || 'free';
+
         const t = {
             ru: {
                 inbox: 'Inbox', today: 'Сегодня', focus: 'Фокус', review: 'Готово',
@@ -65,12 +59,7 @@
         class App {
             constructor() {
                 this.view = 'inbox';
-                this.plan = 'free';
-
-tg.sendData(JSON.stringify({
-    action: "get_subscription"
-}));
-
+                this.plan = planFromUrl;
                 this.tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
                 this.habits = JSON.parse(localStorage.getItem('habits') || '[]');
                 this.lang = localStorage.getItem('lang') || 'ru';
