--- a/index.html
+++ b/index.html
@@ -407,12 +407,7 @@
 
             renderTasks(tasks) {
                 if (!tasks.length) {
-                    const emojis = {
-                        today: '📅',
-                        inbox: '📥',
-                        focus: '🎯',
-                        review: '✅'
-                    };
+                    const emojis = { today: '📅', inbox: '📥', focus: '🎯', review: '✅' };
                     return `
                         <div class="text-center py-20">
                             <div class="text-6xl mb-4">${emojis[this.view] || '✨'}</div>
@@ -427,9 +422,7 @@
                         <div class="flex gap-3">
                             <button onclick="app.toggleTask(${t.id})" 
                                 class="w-6 h-6 rounded-full border-2 flex items-center justify-center flex-shrink-0 transition-all ${
-                                    t.completed 
-                                        ? 'bg-green-500 border-green-500' 
-                                        : 'border-gray-300 hover:border-purple-500'
+                                    t.completed ? 'bg-green-500 border-green-500' : 'border-gray-300 hover:border-purple-500'
                                 }">
                                 ${t.completed ? '<span class="text-white text-sm font-bold">✓</span>' : ''}
                             </button>
@@ -485,11 +478,9 @@
                                 <div class="flex gap-2">
                                     <button onclick="app.checkHabit(${h.id})" 
                                         class="px-4 py-2 rounded-lg font-semibold text-sm transition-all ${
-                                            isDone 
-                                                ? 'bg-green-100 text-green-700' 
-                                                : 'bg-gradient-to-r from-purple-600 to-purple-700 text-white shadow-md active:shadow-sm'
+                                            isDone ? 'bg-green-100 text-green-700' : 'bg-gradient-to-r from-purple-600 to-purple-700 text-white shadow-md active:shadow-sm'
                                         }" ${isDone ? 'disabled' : ''}>
-                                        ${isDone ? '✓' : '✓'}
+                                        ✓
                                     </button>
                                     <button onclick="app.deleteHabit(${h.id})" class="text-red-400 hover:text-red-600 text-xl font-bold px-2">×</button>
                                 </div>
@@ -517,10 +508,10 @@
                 return `
                     <div class="grid grid-cols-2 gap-3 mb-4">
                         ${[
-                            { icon: '📋', label: this.tr('total'), value: this.tasks.length, color: 'blue' },
-                            { icon: '✅', label: this.tr('completed'), value: completed, color: 'green' },
-                            { icon: '🎯', label: this.tr('habits'), value: this.habits.length, color: 'purple' },
-                            { icon: '🔥', label: 'Streak', value: Math.max(...this.habits.map(h => h.streak), 0), color: 'orange' }
+                            { icon: '📋', label: this.tr('total'), value: this.tasks.length },
+                            { icon: '✅', label: this.tr('completed'), value: completed },
+                            { icon: '🎯', label: this.tr('habits'), value: this.habits.length },
+                            { icon: '🔥', label: 'Streak', value: Math.max(...this.habits.map(h => h.streak), 0) }
                         ].map(s => `
                             <div class="bg-white rounded-xl p-4 border border-gray-100 shadow-sm">
                                 <div class="text-3xl mb-2">${s.icon}</div>
@@ -546,41 +537,10 @@
                             <h2 class="text-2xl font-bold mb-2 gradient-text">${this.tr('helpTitle')}</h2>
                             <p class="text-gray-600 text-sm">${this.tr('helpText')}</p>
                         </div>
-                        
                         <div class="space-y-3 mb-6">
                             <div class="flex items-start gap-3 p-3 bg-gray-50 rounded-xl">
                                 <span class="text-2xl">📋</span>
                                 <div>
                                     <h4 class="font-semibold text-sm text-gray-900">Управление задачами</h4>
-                                    <p class="text-xs text-gray-600">
-
-Создавайте задачи и перемещайте их между статусами</p>
-</div>
-</div>
-
-<div class="flex items-start gap-3 p-3 bg-gray-50 rounded-xl">
-    <span class="text-2xl">🎯</span>
-    <div>
-        <h4 class="font-semibold text-sm text-gray-900">Трекер привычек</h4>
-        <p class="text-xs text-gray-600">Отмечайте привычки каждый день и следите за серией</p>
-    </div>
-</div>
-
-<div class="flex items-start gap-3 p-3 bg-gray-50 rounded-xl">
-    <span class="text-2xl">🛒</span>
-    <div>
-        <h4 class="font-semibold text-sm text-gray-900">Список покупок</h4>
-        <p class="text-xs text-gray-600">AI рассчитает примерную стоимость ваших покупок</p>
-    </div>
-</div>
-</div>
-
-<a href="https://t.me/NextStepSupport" target="_blank">
-    <button class="w-full py-4 bg-gradient-to-r from-purple-600 to-purple-700 text-white rounded-xl font-bold shadow-lg active:shadow-md mb-2">
-        💬 ${this.tr('writeSupport')}
-    </button>
-</a>
-<p class="text-xs text-gray-500 text-center">@NextStepSupport</p>
-</div>
-`;
-}
+                                    <p class="text-xs text-gray-600">Создавайте задачи и перемещайте их между статусами</p>
+                                </div>
