--- a/index.html
+++ b/index.html
@@ -562,9 +562,7 @@
                 return `
                     <div class="glass-card rounded-3xl p-6">
                         <div class="text-center mb-6">
-                            <div class="w-24 h-24 bg
-
--gradient-to-br from-purple-400 to-purple-600 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
+                            <div class="w-24 h-24 bg-gradient-to-br from-purple-400 to-purple-600 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
 <span class="text-5xl">💬</span>
 </div>
 <h2 class="text-2xl font-bold mb-2 gradient-text">${this.tr('helpTitle')}</h2>
@@ -575,7 +573,15 @@ ${[
 { icon: '📋', title: 'Управление задачами', text: 'Создавайте задачи и перемещайте их между статусами' },
 { icon: '🎯', title: 'Трекер привычек', text: 'Отмечайте привычки каждый день и следите за серией' },
 { icon: '🛒', title: 'Список покупок', text: 'AI рассчитает примерную стоимость ваших покупок' }
-].map(item =>                                 <div class="flex items-start gap-3 p-4 bg-gradient-to-br from-purple-50 to-pink-50 rounded-2xl">                                     <span class="text-3xl">${item.icon}</span>                                     <div>                                         <h4 class="font-bold text-sm text-gray-900">${item.title}</h4>                                         <p class="text-xs text-gray-600 mt-1">${item.text}</p>                                     </div>                                 </div>                            ).join('')}
+].map(item => `
+    <div class="flex items-start gap-3 p-4 bg-gradient-to-br from-purple-50 to-pink-50 rounded-2xl">
+        <span class="text-3xl">${item.icon}</span>
+        <div>
+            <h4 class="font-bold text-sm text-gray-900">${item.title}</h4>
+            <p class="text-xs text-gray-600 mt-1">${item.text}</p>
+        </div>
+    </div>
+`).join('')
 </div>
 <a href="https://t.me/NextStepSupport" target="_blank">
 <button class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md mb-2">
