--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ ${[
         </div>
     </div>
 `).join('')
-</div>
+}</div>
 <a href="https://t.me/NextStepSupport" target="_blank">
 <button class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md mb-2">
 💬 ${this.tr('writeSupport')}
