--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@ ${[
             <p class="text-xs text-gray-600 mt-1">${item.text}</p>
         </div>
     </div>
-`).join('')
-}</div>
+`).join('')}
+</div>
 <a href="https://t.me/NextStepSupport" target="_blank">
 <button class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md mb-2">
 💬 ${this.tr('writeSupport')}
