--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@ body {
   min-height: 100vh;
 }
 
-.card {
-  background: var(--card);
-  border-bottom: 1px solid var(--border);
-}
 
 .text-muted {
   color: var(--muted);
@@ -43,15 +39,13 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 48px;
-  height: 48px;
-  border-radius: 12px;
-  background: var(--accent);
+  width: 52px;
+  height: 52px;
+  border-radius: 16px;
+  background: #6C63FF;
   color: white;
-  font-size: 22px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 26px;
+  box-shadow: 0 10px 25px rgba(108,99,255,.35);
 }
 
 /* модальные окна */
@@ -69,6 +63,21 @@ body {
   background: white;
   border-radius: 16px 16px 0 0;
   padding: 20px;
+}
+/* карточка задачи — живая, но аккуратная */
+.card {
+  background: #ffffff;
+  border-radius: 14px;
+  margin: 8px 12px;
+  padding: 12px;
+  box-shadow:
+    0 1px 2px rgba(0,0,0,0.04),
+    0 6px 16px rgba(0,0,0,0.06);
+}
+
+/* при нажатии — ощущение кнопки */
+.card:active {
+  transform: scale(0.99);
 }
 </style>
 </head>
@@ -422,28 +431,31 @@ body {
 
                 <!-- чекбокс -->
                 <button onclick="app.toggleTask(${t.id})"
-                    class="w-4 h-4 mt-1 rounded border ${
-                        t.completed
-                            ? 'bg-gray-900 border-gray-900'
-                            : 'border-gray-300'
-                    }">
-                </button>
+  class="w-5 h-5 mt-1 rounded-full border flex items-center justify-center transition ${
+    t.completed
+      ? 'bg-gray-900 border-gray-900'
+      : 'border-gray-300 hover:border-gray-400'
+  }">
+  ${t.completed ? '✓' : ''}
+</button>
 
                 <!-- текст -->
                 <div class="flex-1">
-                    <p class="text-sm ${t.completed ? 'line-through text-muted' : ''}">
+                    <p class="text-[15px] leading-snug ${
+  t.completed ? 'line-through text-gray-400' : 'text-gray-900'
+}">
                         ${t.text}
                     </p>
 
                     <!-- приоритет + статус -->
                     <div class="flex items-center gap-2 mt-2">
-                        <span class="w-2 h-2 rounded-full ${
-                            t.priority === 'high'
-                                ? 'bg-red-500'
-                                : t.priority === 'medium'
-                                ? 'bg-amber-400'
-                                : 'bg-gray-300'
-                        }"></span>
+                        <span class="w-2.5 h-2.5 rounded-full ${
+  t.priority === 'high'
+    ? 'bg-red-500'
+    : t.priority === 'medium'
+    ? 'bg-amber-400'
+    : 'bg-gray-300'
+}"></span>
 
                         <select
                             onchange="app.moveTask(${t.id}, this.value)"
