--- a/index.html
+++ b/index.html
@@ -228,38 +228,55 @@ body {
             }
 
             showAddTaskModal() {
-                const modal = document.createElement('div');
-                modal.innerHTML = `
-                    <div class="modal-backdrop" onclick="app.closeModal()"></div>
-                    <div class="modal-content">
-                        <h3 class="text-2xl font-bold mb-6 gradient-text">✨ ${this.tr('newTask')}</h3>
-                        <input type="text" id="taskInput" placeholder="${this.tr('enterItems')}..." 
-                            class="w-full p-4 border-2 border-purple-200 rounded-2xl mb-4 text-base focus:outline-none focus:border-purple-500 transition-all">
-                        <p class="text-sm font-semibold mb-3 text-gray-700">${this.tr('priority')}:</p>
-                        <div class="grid grid-cols-3 gap-3 mb-6">
-                            <button onclick="app.addFromModal('high')" 
-                                class="py-4 bg-gradient-to-br from-red-400 to-red-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md transform active:scale-95 transition-all">
-                                🔴 ${this.tr('high')}
-                            </button>
-                            <button onclick="app.addFromModal('medium')" 
-                                class="py-4 bg-gradient-to-br from-yellow-400 to-orange-500 text-white rounded-2xl font-bold shadow-lg active:shadow-md transform active:scale-95 transition-all">
-                                🟡 ${this.tr('medium')}
-                            </button>
-                            <button onclick="app.addFromModal('low')" 
-                                class="py-4 bg-gradient-to-br from-green-400 to-green-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md transform active:scale-95 transition-all">
-                                🟢 ${this.tr('low')}
-                            </button>
-                        </div>
-                        <button onclick="app.closeModal()" 
-                            class="w-full py-4 bg-gray-100 text-gray-700 rounded-2xl font-bold active:bg-gray-200 transition-all">
-                            ${this.tr('cancel')}
-                        </button>
-                    </div>
-                `;
-                document.body.appendChild(modal);
-                setTimeout(() => document.getElementById('taskInput')?.focus(), 100);
-            }
+  document.body.insertAdjacentHTML('beforeend', `
+    <div class="modal-backdrop" onclick="this.remove()">
+      <div class="modal-content" onclick="event.stopPropagation()">
 
+        <!-- заголовок -->
+        <div class="mb-4">
+          <h3 class="text-lg font-semibold">Новая задача</h3>
+          <p class="text-sm text-gray-500">Что нужно сделать?</p>
+        </div>
+
+        <!-- поле ввода -->
+        <input
+          id="taskText"
+          type="text"
+          placeholder="Например: Купить продукты"
+          class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:outline-none focus:border-gray-400 text-base mb-4"
+        />
+
+        <!-- приоритет -->
+        <div class="mb-4">
+          <label class="block text-sm text-gray-500 mb-2">Приоритет</label>
+          <select
+            id="taskPriority"
+            class="w-full px-4 py-3 rounded-xl border border-gray-200 bg-white text-base">
+            <option value="low">Низкий</option>
+            <option value="medium">Средний</option>
+            <option value="high">Высокий</option>
+          </select>
+        </div>
+
+        <!-- кнопки -->
+        <div class="flex gap-3 mt-6">
+          <button
+            onclick="this.closest('.modal-backdrop').remove()"
+            class="flex-1 py-3 rounded-xl border border-gray-200 text-gray-600">
+            Отмена
+          </button>
+
+          <button
+            onclick="app.addTaskFromModal()"
+            class="flex-1 py-3 rounded-xl bg-gray-900 text-white font-medium">
+            Добавить
+          </button>
+        </div>
+
+      </div>
+    </div>
+  `);
+}
             showAddHabitModal() {
                 const modal = document.createElement('div');
                 modal.innerHTML = `
@@ -327,13 +344,6 @@ body {
                 }
             }
 
-            addFromModal(priority) {
-                const input = document.getElementById('taskInput');
-                if (input?.value.trim()) {
-                    this.addTask(input.value, priority);
-                    this.closeModal();
-                }
-            }
 
             addHabitFromModal(icon) {
                 const input = document.getElementById('habitInput');
