--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@ body {
     0 1px 2px rgba(0,0,0,0.04),
     0 3px 8px rgba(0,0,0,0.08);
 }
+.fab {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: var(--accent);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  box-shadow: 0 12px 30px rgba(108, 99, 255, 0.45);
+  cursor: pointer;
+}
+
+.fab:active {
+  transform: scale(0.96);
+}
 </style>
 </head>
 <body>
@@ -418,8 +437,15 @@ body {
                     </div>
 
                     ${['today', 'inbox', 'focus'].includes(this.view) ? `
-                        <div class="floating-btn" onclick="app.showAddTaskModal()">+</div>
-                    ` : ''}
+  <button class="fab" onclick="app.showAddTaskModal()">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+      <path d="M12 5v14M5 12h14"
+        stroke="white"
+        stroke-width="2.5"
+        stroke-linecap="round"/>
+    </svg>
+  </button>
+` : ''}
                     ${this.view === 'habits' ? `
                         <div class="floating-btn" onclick="app.showAddHabitModal()">+</div>
                     ` : ''}
