--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@ body {
     transform: translateY(-1px);
   }
 }
+/* hover только для устройств с мышью */
+@media (hover: hover) {
+  .fab:hover {
+    transform: scale(1.06);
+    box-shadow: 0 18px 40px rgba(108, 99, 255, 0.6);
+  }
+}
 </style>
 </head>
 <body>
