--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@ body {
     box-shadow: 0 18px 40px rgba(108, 99, 255, 0.6);
   }
 }
+.habits-wrap {
+  margin: 16px;
+  padding: 8px 0;
+  background: #F5F6FA;
+  border-radius: 18px;
+}
 </style>
 </head>
 <body>
@@ -454,7 +460,11 @@ body {
                             ${this.view === 'stats' ? this.renderStats(completed) : 
                               this.view === 'settings' ? this.renderSettings() :
                               this.view === 'subscription' ? this.renderSubscription() :
-                              this.view === 'habits' ? this.renderHabits() :
+                              this.view === 'habits' ? `
+  <div class="habits-wrap">
+    ${this.renderHabits()}
+  </div>
+` :
                               this.view === 'shopping' ? this.renderShopping() :
                               this.view === 'support' ? this.renderSupport() :
                               this.renderTasks(tasks)}
@@ -556,44 +566,33 @@ body {
                     const isDone = h.lastDone === today;
                     return `
                         <div class="card">
-                            <div class="flex items-center gap-4">
-                                <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
-  ${h.icon}
-</div>
-                                    ${h.icon}
-                                </div>
-                                <div class="flex-1">
-                                    <p class="font-bold text-lg text-gray-900">${h.text}</p>
-                                    <p class="text-sm text-gray-500 mt-1">🔥 ${this.tr('streak')}: ${h.streak} ${this.tr('days')}</p>
-                                </div>
-                                <div class="flex gap-2">
-                                    <button onclick="app.checkHabit(${h.id})"
-  class="w-8 h-8 rounded-full border flex items-center justify-center cursor-pointer
-  ${isDone ? 'bg-gray-900 text-white border-gray-900' : 'border-gray-300'}"
-  ${isDone ? 'disabled' : ''}>
-  ✓
-</button>
-                                    <button onclick="app.deleteHabit(${h.id})" class="text-red-400 hover:text-red-600 text-2xl font-bold px-2">×</button>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                }).join('');
-            }
+  <div class="flex items-center gap-4">
+    <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
+      ${h.icon}
+    </div>
 
-            renderShopping() {
-                return `
-                    <div class="text-center py-20">
-                        <div class="w-32 h-32 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto mb-6 backdrop-blur-sm">
-                            <span class="text-6xl">🛒</span>
-                        </div>
-                        <p class="text-xl font-bold text-white mb-2">${this.tr('shoppingList')}</p>
-                        <p class="text-white text-opacity-70 text-sm mb-8">Добавьте товары и получите примерную стоимость</p>
-                        <button onclick="app.showShoppingModal()" 
-                            class="px-8 py-4 bg-white text-purple-600 rounded-2xl font-bold shadow-lg active:shadow-md transform active:scale-95 transition-all">
-                            ${this.tr('addItem')}
-                        </button>
-                    </div>
+    <div class="flex-1">
+      <p class="font-medium text-gray-900">${h.text}</p>
+      <p class="text-sm text-gray-500 mt-1">
+        🔥 ${this.tr('streak')}: ${h.streak} ${this.tr('days')}
+      </p>
+    </div>
+
+    <div class="flex gap-2">
+      <button onclick="app.checkHabit(${h.id})"
+        class="w-8 h-8 rounded-full border flex items-center justify-center cursor-pointer
+        ${isDone ? 'bg-gray-900 text-white border-gray-900' : 'border-gray-300'}"
+        ${isDone ? 'disabled' : ''}>
+        ✓
+      </button>
+
+      <button onclick="app.deleteHabit(${h.id})"
+        class="text-gray-400 hover:text-red-500 text-xl px-2">
+        ×
+      </button>
+    </div>
+  </div>
+</div>
                 `;
             }
 
