--- a/index.html
+++ b/index.html
@@ -548,54 +548,56 @@ body {
 }
 
             renderHabits() {
-                if (!this.habits.length) {
-                    return `
-                        <div class="text-center py-20">
-                            <div class="w-32 h-32 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto mb-6 backdrop-blur-sm">
-                                <span class="text-6xl">🎯</span>
-                            </div>
-                            <p class="text-xl font-bold text-white mb-2">${this.tr('noHabits')}</p>
-                            <p class="text-white text-opacity-70 text-sm">Нажмите кнопку + чтобы добавить</p>
-                        </div>
-                    `;
-                }
+  if (!this.habits.length) {
+    return `
+      <div class="text-center py-20 text-gray-500">
+        <p class="text-sm">${this.tr('noHabits')}</p>
+        <p class="text-xs mt-2">Нажмите + чтобы добавить</p>
+      </div>
+    `;
+  }
 
-                const today = new Date().toISOString().split('T')[0];
-                
-                return this.habits.map(h => {
-                    const isDone = h.lastDone === today;
-                    return `
-                        <div class="card">
-  <div class="flex items-center gap-4">
-    <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
-      ${h.icon}
-    </div>
+  const today = new Date().toISOString().split('T')[0];
 
-    <div class="flex-1">
-      <p class="font-medium text-gray-900">${h.text}</p>
-      <p class="text-sm text-gray-500 mt-1">
-        🔥 ${this.tr('streak')}: ${h.streak} ${this.tr('days')}
-      </p>
-    </div>
+  return this.habits.map(h => {
+    const isDone = h.lastDone === today;
 
-    <div class="flex gap-2">
-      <button onclick="app.checkHabit(${h.id})"
-        class="w-8 h-8 rounded-full border flex items-center justify-center cursor-pointer
-        ${isDone ? 'bg-gray-900 text-white border-gray-900' : 'border-gray-300'}"
-        ${isDone ? 'disabled' : ''}>
-        ✓
-      </button>
+    return `
+      <div class="card">
+        <div class="flex items-center gap-4">
 
-      <button onclick="app.deleteHabit(${h.id})"
-        class="text-gray-400 hover:text-red-500 text-xl px-2">
-        ×
-      </button>
-    </div>
-  </div>
-</div>
-                `;
-            }
+          <div class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center text-xl">
+            ${h.icon}
+          </div>
 
+          <div class="flex-1">
+            <p class="font-medium text-gray-900">${h.text}</p>
+            <p class="text-sm text-gray-500 mt-1">
+              🔥 ${this.tr('streak')}: ${h.streak} ${this.tr('days')}
+            </p>
+          </div>
+
+          <div class="flex gap-2">
+            <button
+              onclick="app.checkHabit(${h.id})"
+              class="w-8 h-8 rounded-full border flex items-center justify-center cursor-pointer
+              ${isDone ? 'bg-gray-900 text-white border-gray-900' : 'border-gray-300'}"
+              ${isDone ? 'disabled' : ''}>
+              ✓
+            </button>
+
+            <button
+              onclick="app.deleteHabit(${h.id})"
+              class="text-gray-400 hover:text-red-500 text-xl px-2">
+              ×
+            </button>
+          </div>
+
+        </div>
+      </div>
+    `;
+  }).join('');
+}
             renderStats(completed) {
                 return `
                     <div class="grid grid-cols-2 gap-4 mb-4">
