--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body {
     </p>
 
     <div class="flex gap-2 mt-3 overflow-x-auto">
-      ${['today','inbox','focus','review','habits','shopping','stats','subscription','settings'].map(v => `
+      ${['today','inbox','focus','review','habits','shopping','stats','support','subscription','settings'].map(v => `
         <button
           onclick="app.setView('${v}')"
           class="px-3 py-1.5 text-sm rounded-md ${
