--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@ body {
   background: #F5F6FA;
   border-radius: 18px;
 }
+.support-wrap {
+  margin: 16px;
+  padding: 8px 0;
+  background: #F5F6FA;
+  border-radius: 18px;
+}
 </style>
 </head>
 <body>
@@ -647,38 +653,36 @@ body {
 }
 
             renderSupport() {
-                return `
-                    <div class="glass-card rounded-3xl p-6">
-                        <div class="text-center mb-6">
-                            <div class="w-24 h-24 bg-gradient-to-br from-purple-400 to-purple-600 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
-<span class="text-5xl">💬</span>
-</div>
-<h2 class="text-2xl font-bold mb-2 gradient-text">${this.tr('helpTitle')}</h2>
-<p class="text-gray-600 text-sm">${this.tr('helpText')}</p>
-</div>
-<div class="space-y-3 mb-6">
-${[
-{ icon: '📋', title: 'Управление задачами', text: 'Создавайте задачи и перемещайте их между статусами' },
-{ icon: '🎯', title: 'Трекер привычек', text: 'Отмечайте привычки каждый день и следите за серией' },
-{ icon: '🛒', title: 'Список покупок', text: 'AI рассчитает примерную стоимость ваших покупок' }
-].map(item => `
-    <div class="flex items-start gap-3 p-4 bg-gradient-to-br from-purple-50 to-pink-50 rounded-2xl">
-        <span class="text-3xl">${item.icon}</span>
-        <div>
-            <h4 class="font-bold text-sm text-gray-900">${item.title}</h4>
-            <p class="text-xs text-gray-600 mt-1">${item.text}</p>
-        </div>
+  return `
+    <div class="support-wrap">
+
+      <div class="card">
+        <h3 class="text-sm font-medium text-gray-900 mb-2">
+          💬 Поддержка
+        </h3>
+
+        <p class="text-sm text-gray-500 mb-4">
+          Если есть вопросы, идеи или проблемы — напишите нам в Telegram.
+        </p>
+
+        <a
+          href="https://t.me/NextStepSupport"
+          target="_blank"
+          class="inline-flex items-center gap-2 px-4 py-2 rounded-xl
+                 bg-gray-900 text-white text-sm font-medium
+                 hover:bg-gray-800 transition">
+          <span>Написать в поддержку</span>
+        </a>
+      </div>
+
+      <div class="card">
+        <p class="text-xs text-gray-500">
+          Мы стараемся отвечать как можно быстрее.
+        </p>
+      </div>
+
     </div>
-`).join('')}
-</div>
-<a href="https://t.me/NextStepSupport" target="_blank">
-<button class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold shadow-lg active:shadow-md mb-2">
-💬 ${this.tr('writeSupport')}
-</button>
-</a>
-<p class="text-xs text-gray-500 text-center">@NextStepSupport</p>
-</div>
-`;
+  `;
 }
 
 renderSettings() {
